force-app/main/default/objects/Account_Research_Report__c/Account_Research_Report__c.object-meta.xml
<CustomObject>
    <description>This object stores Account Research report and is associated with the Account object.</description>
    <label>Account Research Report</label>
    <nameField>
        <label>Account Research Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Research Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>