force-app/main/default/objects/Account_Research_Report__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Links this Account Research Report to its parent Account. The Account controls ownership, sharing, and roll-up summary calculations for this record.</description>
    <inlineHelpText>Select the Account you researched. Every report must have one Account. If the Account is deleted, its research reports are deleted as well.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Research Reports</relationshipLabel>
    <relationshipName>Account_Research_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>