force-app/main/default/objects/Account_Research_Report__c/fields/Account_Opportunities_Summary__c.field-meta.xml
<CustomField>
    <fullName>Account_Opportunities_Summary__c</fullName>
    <description>Summary of the strategic opportunities summary for the account research report.</description>
    <label>Account Opportunities Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>