force-app/main/default/objects/Account_Research_Report__c/fields/Account_Overview_Summary__c.field-meta.xml
<CustomField>
    <fullName>Account_Overview_Summary__c</fullName>
    <description>The summary of the account summary section of the report.</description>
    <label>Account Overview Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>