force-app/main/default/objects/Account_Research_Report__c/fields/Comparison_to_Previous_Report__c.field-meta.xml
<CustomField>
    <fullName>Comparison_to_Previous_Report__c</fullName>
    <description>This is the comparison to the previous research report.</description>
    <label>Comparison to Previous Report</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>