force-app/main/default/objects/Account_Research_Report__c/fields/Is_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>Is_Most_Recent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if a report is the most up to date account report generated.</description>
    <label>Is Most Recent?</label>
    <type>Checkbox</type>
</CustomField>