force-app/main/default/objects/Account_Research_Report__c/fields/Recent_News_Summary__c.field-meta.xml
<CustomField>
    <fullName>Recent_News_Summary__c</fullName>
    <description>This is the summary of the Recent News section of the account research report.</description>
    <label>Recent News Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>