force-app/main/default/objects/Account_Research_Report__c/fields/Report__c.field-meta.xml
<CustomField>
    <fullName>Report__c</fullName>
    <description>This is the report written for the account.</description>
    <label>Report</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>