force-app/main/default/objects/Account_Research_Report__c/fields/Report_Summary__c.field-meta.xml
<CustomField>
    <fullName>Report_Summary__c</fullName>
    <description>This is the summary of the Account Intelligence Research Report.</description>
    <label>Report Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>