force-app/main/default/objects/Account_Research_Report__c/fields/Run_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Run_Date_Time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Run Date/Time</label>
    <type>DateTime</type>
</CustomField>