force-app/main/default/objects/Account_Research_Report__c/fields/Strategic_Positioning_Summary__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Positioning_Summary__c</fullName>
    <label>Strategic Positioning Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>