force-app/main/default/objects/Account_Research_Report__c/fields/Strategic_Priorities_Summary__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Priorities_Summary__c</fullName>
    <description>Summary of the strategic priorities section of the account research report.</description>
    <label>Strategic Priorities Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>