force-app/main/default/objects/Account_Research_Report__c/fields/Tech_Stack_and_Partnerships_Summary__c.field-meta.xml
<CustomField>
    <fullName>Tech_Stack_and_Partnerships_Summary__c</fullName>
    <description>Summary of the technology insights and partnerships section of the account research report.</description>
    <label>Tech Stack and Partnerships Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>